--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,9 @@
-.loading-text {
-  color: green;
+#app {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+main {
+  flex: 1 0 auto;
 }
